--- a/index.html
+++ b/index.html
@@ -320,10 +320,10 @@
      <div class="container">
          <div class="client active">
            <img src="img/ahmed2.jpg" alt="Ahmde Kotb">
-           <p>I am Ahmde Kotb, owner of El-Mohands Academy website
+           <p>I am Ahmed Kotb, owner of El-Mohands Academy website
              <br>
              I am pleased that you are here with us </p>
-             <span>Ahmde Kotb</span>
+             <span>Ahmed Kotb</span>
          </div>
          <div class="client hidden">
             <img src="img/safaa.jpg" alt="">
